# substrait-rs

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  comment.md  commitlint.config.js  pixi.toml  release-plz.toml
.github/: bors.toml  dependabot.yml
.github/workflows/: check.yml  codegen.yml  cron.yml  docs.yml  generate.yml  merge.yml  pull-request.yml  release.yml  test.yml
antlr/: .gitignore  README.md  antlr.py
src/: extensions.rs  lib.rs  proto.rs  text.rs  urn.rs  version.rs
src/parse/: context.rs  extended_expression.rs  mod.rs  parse.rs  parser.rs  plan.rs  plan_relation.rs  plan_version.rs  relation.rs  root_relation.rs  typed.rs  version.rs  wrap.rs
src/parse/extensions/: advanced_extension.rs  mod.rs  simple_extension_declaration.rs  simple_extension_uri.rs
src/parse/extensions/simple_extension_declaration/: extension_function.rs  extension_type.rs  extension_type_variation.rs  mod.rs
src/parse/proto/: mod.rs  plan_version.rs  version.rs
src/parse/proto/extensions/: mod.rs  simple_extension_uri.rs  simple_extension_urn.rs
src/parse/proto/extensions/simple_extension_declaration/: declaration.rs  extension_function.rs  extension_type.rs  extension_type_variation.rs  mapping_type.rs  mod.rs  simple_extension_declaration.rs
src/parse/simple_extensions/: function.rs  mod.rs
src/parse/text/: mod.rs
src/parse/text/simple_extensions/: argument.rs  context.rs  derivation.rs  extension.rs  extensions.rs  file.rs  mod.rs  parsed_type.rs  registry.rs  scalar_functions.rs  type_ast.rs  types.rs
src/parse/text/simple_extensions/derivations/: .gitignore  evaluate.rs  mod.rs  substraittypelexer.rs  substraittypelistener.rs  substraittypeparser.rs
src/registry/: context.rs  extension.rs  mod.rs  registry.rs  types.rs
