# SPDX-License-Identifier: Apache-2.0
[package]
name = "substrait"
version = "0.62.0"
edition = "2024"
rust-version = "1.85.1"
description = "Cross-Language Serialization for Relational Algebra"
documentation = "https://docs.rs/substrait"
readme = "README.md"
homepage = "https://substrait.io"
repository = "https://github.com/substrait-io/substrait-rs"
license = "Apache-2.0"
keywords = ["substrait"]
include = [
    "LICENSE",
    "src/",
    "!src/gen/**/*.bin",
    "substrait/LICENSE",
    "substrait/extensions/**/*.yaml",
    "substrait/proto/**/*.proto",
    "substrait/text/**/*.yaml",
]

[features]
default = []
extensions = ["dep:serde_yaml"]
parse = ["dep:hex", "dep:thiserror", "semver"]
semver = ["dep:semver"]
serde = ["dep:pbjson", "dep:pbjson-types"]

[dependencies]
hex = { version = "0.4.3", optional = true }
pbjson = { version = "0.8.0", optional = true }
pbjson-types = { version = "0.8.0", optional = true }
prost = "0.14.1"
prost-types = "0.14.1"
regress = "0.10.4"
semver = { version = "1.0.27", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = { version = "0.9.34", optional = true }
thiserror = { version = "2.0.17", optional = true }

[package.metadata.docs.rs]
all-features = true
