# SPDX-License-Identifier: Apache-2.0
[package]
name = "substrait"
version = "0.63.0"
edition = "2024"
rust-version = "1.88"
description = "Cross-Language Serialization for Relational Algebra"
documentation = "https://docs.rs/substrait"
readme = "README.md"
homepage = "https://substrait.io"
repository = "https://github.com/substrait-io/substrait-rs"
license = "Apache-2.0"
keywords = ["substrait"]
# Only build.rs (which derives the Substrait version from the `substrait-prost`
# pin) and the Rust sources are shipped; the generated types come from the
# `substrait-prost` and `substrait-extensions` dependencies.
build = "build.rs"
include = [
    "LICENSE",
    "build.rs",
    "src/**/*.rs",
]

[features]
default = []
embed-descriptor = ["substrait-prost/embed-descriptor"]
extensions = ["dep:serde_yaml"]
parse = ["dep:hex", "dep:thiserror", "dep:serde_yaml", "semver"]
protoc = ["substrait-prost/protoc"]
semver = ["dep:semver"]
serde = ["substrait-prost/serde"]

[dependencies]
# Generated Substrait types, packaged from the spec. Pinned to an exact version
# so the reported Substrait version (derived from this pin in build.rs) is
# unambiguous. Both track the same spec tag and are bumped together.
substrait-prost = "=0.87.0-alpha.4"
substrait-extensions = "=0.87.0-alpha.4"
hex = { version = "0.4.3", optional = true }
prost = "0.14.1"
semver = { version = "1.0.27", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = { version = "2.0.17", optional = true }
indexmap = { version = "2.7.0", features = ["serde"] }

[dev-dependencies]
# Only used by the `embed-descriptor` reflection test.
prost-types = "0.14.1"

[build-dependencies]
# Parse the exact `substrait-prost` version pin out of Cargo.toml to derive the
# Substrait version constants.
semver = "1.0.27"
toml = "0.8.19"

[package.metadata.docs.rs]
all-features = true
